--- a/resources/style.css/stylesheet.css
+++ b/resources/style.css/stylesheet.css
@@ -75,6 +75,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: auto;
+    padding-top: 100px;
   }
 
   .words {
